--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -1994,8 +1994,7 @@
                                             class="bg-white rounded-2xl shadow-sm border border-slate-200 border-dashed border-2 p-0 md:p-12 text-center">
                                             <div class="relative inline-block">
                                                 <!-- Circular Background for Icon -->
-                                                <div
-                                                    class="mb-6 mt-6">
+                                                <div class="mb-6 mt-6">
                                                     <i
                                                         class="fas fa-hand-pointer text-2xl text-red-500 animate-bounce"></i>
                                                 </div>
@@ -2008,6 +2007,23 @@
                                                     Please choose a specific transport provider from the available
                                                     options to proceed.
                                                 </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div id="transport-loader"
+                                        class="hidden inset-0 z-50 flex items-center justify-center bg-white/60 backdrop-blur-sm transition-opacity duration-300">
+                                        <div class="flex space-x-2">
+                                            <!-- Dot 1 -->
+                                            <div class="w-3 h-3 md:w-4 md:h-4 bg-blue-600 rounded-full animate-dot">
+                                            </div>
+                                            <!-- Dot 2 -->
+                                            <div
+                                                class="w-3 h-3 md:w-4 md:h-4 bg-blue-600 rounded-full animate-dot dot-delay-1">
+                                            </div>
+                                            <!-- Dot 3 -->
+                                            <div
+                                                class="w-3 h-3 md:w-4 md:h-4 bg-blue-600 rounded-full animate-dot dot-delay-2">
                                             </div>
                                         </div>
                                     </div>
@@ -2865,9 +2881,15 @@
             }
 
             async function pincodeFetchTransport(query, id_mode) {
+
+                document.getElementById('noTransport').classList.add('hidden');
+                document.getElementById('transportCard').classList.add('hidden');
+                document.getElementById('transport-loader').classList.remove('hidden');
+                
                 try {
                     const response = await fetch(`/sales/input-transport/${encodeURIComponent(query)}/${id_mode}`);
                     const data = await response.json();
+                    document.getElementById('transport-loader').classList.add('hidden');
                     if (data.length > 0) {
                         document.getElementById('noTransport').classList.add('hidden');
                         document.getElementById('transportCard').classList.remove('hidden');
@@ -2887,6 +2909,7 @@
                     return;
 
                 } catch (error) {
+                    document.getElementById('transport-loader').classList.add('hidden');
                     console.error("API Error:", error);
                 }
             }
